--- a/src/assets/Styles/Style.css
+++ b/src/assets/Styles/Style.css
@@ -211,6 +211,50 @@ opacity:1
 .carousel-indicators {
     opacity:0.0;
     }
+
+    /* Products Styling */
+.HomeProductsCon {
+  
+    margin:auto;
+    text-align:center;
+}
+.HomeProductsCon p  {
+    color:white;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 400;
+    font-style: normal;
+
+}
+#ProBtn {
+    color:white !important;
+    padding:3px;
+    border:1px solid white;
+    width:50%;
+    margin-bottom:10px;
+
+    &:hover {
+
+        text-decoration: underline;
+
+    }
+}
+   .Product {
+    width:25rem;
+    margin:auto;
+
+   }
+   .Product h5 {
+ margin-top:10px;
+
+   }
+.Product img {
+    width:24.3rem;
+    height:23rem;
+  
+  box-shadow:2px 2px 5px white;
+  outline:1px solid white;
+
+}
 /* Media Queries */
 
 @media only screen and (max-width: 720px) {
@@ -318,6 +362,25 @@ right:120px;
       outline:1px solid white;
     
     
+      }
+      /* Home Products Queries */
+
+      .Product {
+        display:flex;
+        align-items:center;
+        width:90%;
+        flex-direction:column;
+        font-size:0.4rem;
+
+      }
+      .Product img {
+
+        width:100%;
+        margin-top:0.4rem;
+      
+      box-shadow:2px 2px 5px white;
+      outline:1px solid white;
+
       }
     }
 
