--- a/src/assets/Styles/Style.css
+++ b/src/assets/Styles/Style.css
@@ -39,54 +39,47 @@ background-color:black !important;
 /* Landing Page Styling */
 
 .LandingPage {
-
-    display:flex;
-    justify-content: end;
-    
-}
-.LandingPage :is(h1, h2, h3,h4) {
-    position:relative;
-    left:48px;
-    z-index:9999;
-text-align:center;
-color:white;
-margin-left:90px;
-display:block;
-font-family: "Cormorant Garamond", serif;
-font-weight: 500;
-font-style: normal;
-
-}
-.Headline {
-
-background-color:orange;
-
-}
-#HeadBtn {
-
-    color:white;
-    padding:10px;
-    border:1px solid white;
-    position:relative;
-    left:220px;
-    margin-top:20px;
-    z-index:9999;
-&:hover {
-
-    text-decoration: underline;
-
-}
-
-} 
-.LandingPhoto {
- object-fit:cover;
-    object-position:center;
-    width:40.625rem;
-    height:50rem;
-    position:relative;
-
-
-}
+    display: flex;
+    justify-content: flex-end; 
+    align-items: center; 
+  }
+  
+  .Headline {
+    text-align: center;
+    color: white;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .Headline :is(h1, h2, h3, h4, h5) {
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 500;
+    font-style: normal;
+  
+  }
+  #HeadBtn {
+    color: white;
+    padding: 10px;
+    border: 1px solid white;
+    margin-top: 20px;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+  
+  .LandingPhoto {
+    width: 40.625rem;
+    height: 50rem;
+    overflow: hidden; 
+  }
+  
+  .LandingPhoto img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
 /* Top Content Styling */
 
 h2 {
