--- a/src/assets/Styles/Style.css
+++ b/src/assets/Styles/Style.css
@@ -80,6 +80,8 @@ background-color:black !important;
     object-fit: cover;
     object-position: center;
   }
+
+
 /* Top Content Styling */
 
 h2 {
@@ -280,6 +282,82 @@ opacity:1
         text-decoration: underline;
 
     }
+
+}
+/* About Styling */
+
+.Legacy {
+
+}
+
+.LegacyContent {
+
+    display:flex;
+
+}
+.Legacy h2 {
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 700;
+    font-style: italic;
+    text-align:left;
+   letter-spacing:.2rem;
+  }
+
+  .Legacy p {
+    font-family: "Cormorant Garamond", serif;
+  font-weight: 400;
+  font-style: normal;
+    text-align:left;
+   letter-spacing:.1rem;
+   color:white;
+   width:40%;
+  }
+  .AboutLogo {
+    text-align:center;
+    color:white;
+    font-family: "Italianno", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size:7.5rem;
+  margin-top:-30px;
+  margin-left:30px;
+  letter-spacing:2.1rem;
+
+  }
+  #OwnerImg {
+   
+    width:50%;
+    height:90%;
+    margin:auto;
+   
+    }
+.OwnerContent {
+display:flex;
+flex-direction:column;
+
+}
+.OwnerText {
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 400;
+    font-style: normal;
+      text-align:left;
+     letter-spacing:.1rem;
+     color:white;
+     margin-top:10px;
+     width:50%;
+     margin:auto;
+}
+.FindUsCon {
+
+    text-align:center;
+
+}
+.FindUsCon p  {
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 400;
+    font-style: normal;
+     letter-spacing:.1rem;
+     color:white;
 
 }
 /* Media Queries */
