--- a/src/assets/Styles/Style.css
+++ b/src/assets/Styles/Style.css
@@ -12,9 +12,45 @@ box-sizing:border-box;
 background-color:black !important;
 }
 
+/* Animations */
+
+@keyframes Fadein  {
+from {
+
+  opacity:0
+
+
+}
+to {
+
+  opacity:1
+
+
+}
+
+
+
+}
+@keyframes Btnfill {
+0% {
+   border:2px solid white;
+  background-color:black;
+
+}
+
+100% {
+
+
+
+  background-color:white !important;
+
+
+}
+  
+
+}
 /* Navbar and Logo Styling */
 .Logo {
-
     text-align:center;
     color:white;
     font-family: "Italianno", cursive;
@@ -22,6 +58,17 @@ background-color:black !important;
   font-style: normal;
 }
 
+.TextDecoRemover {
+text-decoration-color: rgb(0, 0, 0) !important;
+color:white !important;
+text-decoration:underline
+
+}
+router-link {
+
+  text-decoration:none;
+
+}
 .nav a {
 
     color:white !important;
@@ -30,11 +77,31 @@ background-color:black !important;
 .nav-link {
 
     color:white !important;
-    font-optical-sizing: auto;
+    font-family: "Cormorant Garamond", serif;
     font-weight: 700;
     font-style: normal;
+    opacity:0.5;
+    &:hover {
+
+      opacity:1;
+
+    }
+  
+   
 
 }
+.nav-link:hover {
+
+
+  opacity:1;
+
+}
+.router-link-active {
+opacity:1;
+  color:white !important;
+
+}
+
 
 /* Landing Page Styling */
 
@@ -56,15 +123,21 @@ background-color:black !important;
     font-family: "Cormorant Garamond", serif;
     font-weight: 500;
     font-style: normal;
-  
+   animation: 5s 1 alternate Fadein;
   }
   #HeadBtn {
     color: white;
+    
     padding: 10px;
     border: 1px solid white;
     margin-top: 20px;
+    transition: background-color 2s 100ms;
     &:hover {
       text-decoration: underline;
+      color:white !important;
+      opacity:1;
+      background: hsl(0, 0%, 11%) !important;
+    
     }
   }
   
